// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jitterAlert components basic render 1`] = `
<AnimatedComponent
  style={
    Array [
      Object {},
      Object {
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      },
    ]
  }
>
  <TouchableOpacity
    activeOpacity={0.8}
    onPress={[Function]}
  >
    <Component
      active={true}
      animationConfig={
        Object {
          "delay": 0,
          "duration": 500,
          "easing": [Function],
          "isInteraction": true,
          "useNativeDriver": true,
        }
      }
      color="#000"
      d="M512 922.24c44.16 0 79.36-35.2 79.36-80H432.64c0 45.44 35.2 80 79.36 80z m260.48-260.48V453.76C772.48 328.96 684.8 224 569.6 197.12v-26.24c0-29.44-16-55.04-43.52-61.44C486.4 99.84 454.4 129.92 454.4 169.6v27.52C339.2 224 251.52 328.96 251.52 453.76v208L172.8 743.04v40.32h678.4v-40.32l-78.72-81.28z"
      interval={200}
      size={64}
    />
  </TouchableOpacity>
</AnimatedComponent>
`;

exports[`jitterAlert components renderContent render 1`] = `
<AnimatedComponent
  style={
    Array [
      Object {},
      Object {
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      },
    ]
  }
>
  <TouchableOpacity
    activeOpacity={0.8}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "backgroundColor": "#f0f",
          "height": 200,
          "width": 200,
        }
      }
    />
  </TouchableOpacity>
</AnimatedComponent>
`;
